--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,17 @@
         }
     ],
     "license": "LGPL-2.1",
-    "require": { "php": ">=5.3.0" }
+    "require": { "php": ">=5.3.0" },
+    "require-dev": {
+		"jakub-onderka/php-parallel-lint": "0.9",
+		"mediawiki/mediawiki-codesniffer": "0.5.0",
+		"phpunit/phpunit": "4.6.*"
+	},
+	"scripts": {
+		"test": [
+			"parallel-lint . --exclude vendor",
+			"phpunit tests/",
+			"phpcs -p -s ."
+		]
+	}
 }
