--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,9 @@
     ],
     "license": "LGPL-2.1",
     "require": { "php": ">=5.3.0" },
+    "autoload": {
+        "psr-0": { "TextCat": "" }
+    },
     "require-dev": {
 		"jakub-onderka/php-parallel-lint": "0.9",
 		"mediawiki/mediawiki-codesniffer": "0.5.0",
