--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,17 @@
     },
     "require-dev": {
 		"jakub-onderka/php-parallel-lint": "0.9",
-		"mediawiki/mediawiki-codesniffer": "0.5.0",
-		"phpunit/phpunit": "4.6.*"
+		"mediawiki/mediawiki-codesniffer": "16.0.0",
+		"phpunit/phpunit": "4.8.36"
 	},
 	"scripts": {
 		"test": [
 			"parallel-lint . --exclude vendor",
 			"phpunit tests/",
 			"phpcs -p -s"
+		],
+		"fix": [
+			"phpcbf"
 		]
 	}
 }
