--- a/composer.json
+++ b/composer.json
@@ -1,34 +1,41 @@
 {
-    "name": "wikimedia/textcat",
-    "description": "PHP port of the TextCat language guesser utility, see http://odur.let.rug.nl/~vannoord/TextCat/.",
-    "authors": [
-        {
-            "name": "Trey Jones",
-            "email": "tjones@wikimedia.org"
-        },
-        {
-            "name": "Stanislav Malyshev",
-            "email": "smalyshev@wikimedia.org"
-        }
-    ],
-    "license": "LGPL-2.1",
-    "require": { "php": ">=5.3.0" },
-    "autoload": {
-        "psr-0": { "TextCat": "" }
-    },
-    "require-dev": {
+	"name": "wikimedia/textcat",
+	"description": "PHP port of the TextCat language guesser utility, see http://odur.let.rug.nl/~vannoord/TextCat/.",
+	"authors": [
+		{
+			"name": "Trey Jones",
+			"email": "tjones@wikimedia.org"
+		},
+		{
+			"name": "Stanislav Malyshev",
+			"email": "smalyshev@wikimedia.org"
+		}
+	],
+	"license": "LGPL-2.1",
+	"require": {
+		"php": ">=5.3.0"
+	},
+	"autoload": {
+		"psr-0": {
+			"TextCat": ""
+		}
+	},
+	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "0.9",
 		"mediawiki/mediawiki-codesniffer": "16.0.0",
-		"phpunit/phpunit": "4.8.36"
+		"phpunit/phpunit": "4.8.36",
+		"mediawiki/minus-x": "0.3.1"
 	},
 	"scripts": {
 		"test": [
 			"parallel-lint . --exclude vendor",
 			"phpunit tests/",
-			"phpcs -p -s"
+			"phpcs -p -s",
+			"minus-x check ."
 		],
 		"fix": [
-			"phpcbf"
+			"phpcbf",
+			"minus-x fix ."
 		]
 	}
 }
