--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
 			"email": "smalyshev@wikimedia.org"
 		}
 	],
-	"license": "LGPL-2.1",
+	"license": "LGPL-2.1-only",
 	"require": {
 		"php": ">=5.3.0"
 	},
